<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="clear_one">CE</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="plus_minus">+/-</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="backspace">---</string>
    <string name="Invalid">Invalid Input</string>

    <string-array name="type">
        <item>Convert</item>
        <item>Binary</item>
        <item>Octal</item>
        <item>Decimal</item>
        <item>Hexadecimal</item>
    </string-array>
</resources>