<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear_one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/borderdif"
                android:text="@string/clear_one"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/borderdif"
                android:text="@string/clear"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/borderdif"
                android:text="@string/divide"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <ImageButton
                android:id="@+id/backspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/borderdif"
                android:contentDescription="@string/backspace"
                android:textColor="#000000"
                android:textSize="24sp"
                app:srcCompat="@drawable/backspace"
                android:backgroundTint="#1D6977"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/seven"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000"/>

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/eight"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/nine"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/borderdif"
                android:text="@string/multiply"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/four"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/five"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/six"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/borderdif"
                android:text="@string/minus"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/one"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/two"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/three"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/borderdif"
                android:text="@string/add"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/plus_minus"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/zero"
                android:textSize="24sp"
                app:strokeColor="#000000"
                android:textColor="#000000" />

            <Button
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/point"
                android:textColor="#000000"
                android:textSize="24sp"
                app:strokeColor="#000000" />

            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/borderdif"
                android:text="@string/equal"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:strokeColor="#000000"
                android:backgroundTint="#1D6977"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUp"
        app:layout_constraintVertical_bias="0.72" />

</androidx.constraintlayout.widget.ConstraintLayout>